Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
Current travis failure:
5: ==21958== 128 bytes in 1 blocks are definitely lost in loss record 1 of 2 5: ==21958== at 0x6228F9: je_arrow_mallocx (jemalloc.c:2292) 5: ==21958== by 0x5AA05E: arrow::(anonymous namespace)::AllocateAligned(long, unsigned char**) (memory_pool.cc:58) 5: ==21958== by 0x5AA7CF: arrow::DefaultMemoryPool::Allocate(long, unsigned char**) (memory_pool.cc:96) 5: ==21958== by 0x5A04F1: arrow::PoolBuffer::Reserve(long) (buffer.cc:93) 5: ==21958== by 0x5A07E3: arrow::PoolBuffer::Resize(long, bool) (buffer.cc:104) 5: ==21958== by 0x571417: arrow::TestBuffer_ResizeOOM_Test::TestBody() (buffer-test.cc:119) 5: ==21958== by 0x60FE27: void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (gtest.cc:2402) 5: ==21958== by 0x609E29: void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) (gtest.cc:2438) 5: ==21958== by 0x5EF880: testing::Test::Run() (gtest.cc:2475) 5: ==21958== by 0x5F0127: testing::TestInfo::Run() (gtest.cc:2656) 5: ==21958== by 0x5F07EB: testing::TestCase::Run() (gtest.cc:2774) 5: ==21958== by 0x5F71BB: testing::internal::UnitTestImpl::RunAllTests() (gtest.cc:4649)
Attachments
Issue Links
- links to