ARROW-2210: [C++] Reset ptr on failed memory allocation